--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "xwg/darkmira-test",
+    "name": "hackapp",
     "license": "MIT",
     "type": "project",
     "autoload": {
@@ -9,7 +9,7 @@
         }
     },
     "require": {
-        "php": ">=5.3.3",
+        "php": ">=5.3.3,<7.0.0",
         "symfony/symfony": "~2.7@beta",
         "doctrine/orm": "~2.2,>=2.2.3,<2.5",
         "doctrine/dbal": "<2.5",
