--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     },
     "require": {
-        "php": ">=5.3.3,<7.0.0",
+        "php": "^5.5",
         "symfony/symfony": "~2.7@beta",
         "doctrine/orm": "~2.2,>=2.2.3,<2.5",
         "doctrine/dbal": "<2.5",
